# Slic3r

./: .gitignore  .gitmodules  .travis.yml  Build.PL  BuildLinux.sh  BuildMacOS.sh  CMakeLists.txt  CNAME  CONTRIBUTING.md  README.markdown  README.md  Slic3r-exe.lnk  appveyor.yml  build_linux  create_release.py  index.html  index.rss  slic3r  slic3r.pl  version.inc  wing_test_rel_ext.gcode
src/: CMakeLists.txt  PrusaSlicer.cpp  PrusaSlicer.hpp  PrusaSlicer_app_msvc.cpp  slic3r.cpp  slic3r.hpp  windows-build.txt
src/GUI/: AboutDialog.cpp  AboutDialog.hpp  ColorScheme.hpp  Controller.hpp  GUI.cpp  GUI.hpp  MainFrame.cpp  MainFrame.hpp  Notifier.hpp  OptionsGroup.cpp  OptionsGroup.hpp  Plater.cpp  Plater.hpp  Preset.cpp  Preset.hpp  PresetEditor.hpp  ProgressStatusBar.cpp  ProgressStatusBar.hpp  Scene3D.cpp  Scene3D.hpp  Settings.cpp  Settings.hpp  misc_ui.cpp  misc_ui.hpp
src/GUI/ColorScheme/: ColorSchemeBase.hpp  Default.hpp  Solarized.hpp
src/GUI/Dialogs/: AboutDialog.cpp  AboutDialog.hpp  AnglePicker.hpp  MaterialEditor.cpp  ObjectCutDialog.cpp  ObjectCutDialog.hpp  PresetEditor.cpp  PresetEditor.hpp  PresetPage.cpp  PrintEditor.cpp  PrinterEditor.cpp
src/GUI/OptionsGroup/: Field.hpp  UI_Choice.cpp  UI_Color.cpp  UI_NumChoice.cpp  UI_Point.cpp  UI_Point3.cpp  UI_Slider.cpp
src/GUI/Plater/: Plate2D.cpp  Plate2D.hpp  Plate3D.cpp  Plate3D.hpp  Plater2DObject.hpp  PlaterObject.cpp  PlaterObject.hpp  PresetChooser.cpp  PresetChooser.hpp  Preview2D.hpp  Preview3D.cpp  Preview3D.hpp  PreviewDLP.hpp
src/admesh/: stl.h
src/avrdude/: ac_cfg.h  config.c  main.c
src/build-utils/: encoding-check.cpp
src/clipper/: clipper.cpp  clipper.hpp
src/exif/: CMakeLists.txt  README  exif.c
src/exif/include/: exif.h
src/libslic3r/: AppConfig.cpp  AppConfig.hpp  Arrange.cpp  Arrange.hpp  BoundingBox.cpp  BoundingBox.hpp  BridgeDetector.cpp  BridgeDetector.hpp  CMakeLists.txt  ClipperUtils.cpp  ClipperUtils.hpp  Config.cpp  Config.hpp  CustomGCode.cpp  CustomGCode.hpp  EdgeGrid.cpp  EdgeGrid.hpp  ElephantFootCompensation.cpp  ExPolygon.cpp  ExPolygon.hpp  Extruder.cpp  Extruder.hpp  ExtrusionEntity.cpp  ExtrusionEntity.hpp  ExtrusionEntityCollection.cpp  ExtrusionEntityCollection.hpp  Flow.cpp  Flow.hpp  GCode.cpp  GCode.hpp  GCodeReader.hpp  GCodeSender.cpp  GCodeSender.hpp  GCodeTimeEstimator.cpp  GCodeTimeEstimator.hpp  GCodeWriter.cpp  GCodeWriter.hpp  Geometry.cpp  Geometry.hpp  Layer.cpp  (+69 more)
src/libslic3r/Fill/: Fill.cpp  Fill.hpp  Fill3DHoneycomb.cpp  Fill3DHoneycomb.hpp  FillAdaptive.cpp  FillAdaptive.hpp  FillBase.cpp  FillBase.hpp  FillConcentric.cpp  FillConcentric.hpp  FillGyroid.cpp  FillGyroid.hpp  FillHoneycomb.cpp  FillHoneycomb.hpp  FillLine.cpp  FillLine.hpp  FillPlanePath.cpp  FillPlanePath.hpp  FillRectilinear.cpp  FillRectilinear.hpp  FillRectilinear2.cpp  FillRectilinear2.hpp  FillRectilinear3.cpp  FillRectilinear3.hpp  FillSmooth.cpp  FillSmooth.hpp
src/libslic3r/Format/: 3mf.cpp  3mf.hpp  AMF.cpp  AMF.hpp  CWS.cpp  CWS.hpp  Format.cpp  Format.hpp  PRUS.cpp  SL1.cpp  SL1.hpp  SLAArchive.cpp  SLAArchive.hpp
src/libslic3r/GCode/: Analyzer.cpp  Analyzer.hpp  AvoidCrossingPerimeters.cpp  AvoidCrossingPerimeters.hpp  CoolingBuffer.cpp  CoolingBuffer.hpp  FanMover.cpp  FanMover.hpp  GCodeProcessor.cpp  GCodeProcessor.hpp  PressureEqualizer.cpp  PreviewData.cpp  PreviewData.hpp  PrintExtents.cpp  SeamPlacer.cpp  SeamPlacer.hpp  SpiralVase.cpp  SpiralVase.hpp  ThumbnailData.hpp  ToolOrdering.cpp  ToolOrdering.hpp  WipeTower.cpp  WipeTower.hpp  WipeTowerPrusaMM.cpp  WipeTowerPrusaMM.hpp
src/libslic3r/Milling/: MillingPostProcess.cpp  MillingPostProcess.hpp
src/libslic3r/SLA/: Common.cpp  Concurrency.hpp  Contour3D.cpp  Contour3D.hpp  Hollowing.cpp  IndexedMesh.cpp  IndexedMesh.hpp  Pad.cpp  RasterWriter.cpp  SLAAutoSupports.cpp  SLAAutoSupports.hpp  SLABasePool.cpp  SLABoilerPlate.hpp  SLAPad.cpp  SLASupportTree.cpp  SLASupportTree.hpp  (+7 more)
src/polypartition/: polypartition.h
src/semver/: semver.c  semver.h
src/slic3r/: CMakeLists.txt
src/test/: CMakeLists.txt  test_data.cpp  test_data.hpp  test_harness.cpp  test_options.hpp  test_options.hpp.in
src/utils/: extrude-tin.cpp  nowide-iostream.cpp  wireframe.cpp
tests/superslicerlibslic3r/: CMakeLists.txt  superslicerlibslic3r_tests.cpp  test_complete_objects.cpp  test_data.cpp  test_data.hpp  test_dense_infill.cpp  test_denserinfill.cpp  test_extrusion_entity.cpp  test_fill.cpp  test_flow.cpp  test_gcodewriter.cpp  test_geometry.cpp  test_model.cpp  test_print.cpp  test_skirt_brim.cpp  test_thin.cpp
xs/: .gitignore  Build.PL  CMakeLists.txt  MANIFEST  MANIFEST.SKIP  libslic3r.doxygen  main.xs.in
xs/src/: BoundingBox.cpp  BoundingBox.hpp  CMakeLists.txt  ClipperUtils.cpp  ConfSpace.cpp  ConfSpace.hpp  Config.hpp  ExPolygon.cpp  ExPolygon.hpp  ExPolygonCollection.cpp  Extruder.cpp  Extruder.hpp  ExtrusionEntity.cpp  ExtrusionEntityCollection.cpp  Flow.cpp  Line.cpp  Point.cpp  Point.hpp  Polygon.cpp  Polygon.hpp  Polyline.cpp  PolylineCollection.cpp  PolylineCollection.hpp  PrintConfig.hpp  SVG.cpp  SVG.hpp  clipper.cpp  clipper.hpp  myinit.h  perlglue.cpp  perlglue.hpp  slic3r.cpp  tiny_obj_loader.h  xsinit.h
xs/t/: 01_trianglemesh.t  02_transformationmatrix.t  04_expolygon.t  08_extrusionloop.t  09_polyline.t  15_config.t  18_confspace.t  19_model.t  20_print.t  21_gcode.t  22_exception.t  23_3mf.t  23_config.t  24_gcodemath.t  25_transformationmatrix.t
xs/xsp/: AboutDialog.xsp  BoundingBox.xsp  Clipper.xsp  ConditionalGcode.xsp  ConfSpace.xsp  Config.xsp  ExPolygon.xsp  ExPolygonCollection.xsp  Extruder.xsp  ExtrusionEntityCollection.xsp  ExtrusionLoop.xsp  ExtrusionPath.xsp  Filler.xsp  Flow.xsp  GCode.xsp  GCodeSender.xsp  GCodeTimeEstimator.xsp  GCodeWriter.xsp  GUI.xsp  GUI_3DScene.xsp  Geometry.xsp  Layer.xsp  LayerHeightSpline.xsp  Line.xsp  Model.xsp  NonplanarFacet.xsp  NonplanarSurface.xsp  Point.xsp  Polygon.xsp  Polyline.xsp  PolylineCollection.xsp  Print.xsp  SLAPrint.xsp  SlicingAdaptive.xsp  Surface.xsp  SurfaceCollection.xsp  TransformationMatrix.xsp  TriangleMesh.xsp  XS.xsp  my.map  (+1 more)
(+1004 files in other folders)
